# arxiv-cli

./: COMPARISON.md  README.md
ver-claude/: .coveragerc  .gitignore  CHECKLIST.md  DIFFERENCES.md  PROMPTS.md  README.md  TUTORIAL.md  requirements.txt  setup.py
ver-claude/arxiv_cli/: __init__.py  cli.py
ver-claude/tests/: test_api.py  test_commands.py  (+11 more)
ver-gpt/: .gitignore  README.md  REPORT.md  arxiv  go.mod  pyproject.toml
ver-gpt/arxiv_cli/: __init__.py
ver-gpt/arxiv_cli/api/: client.py  metadata.py  models.py  parser.py  rate_limit.py  utils.py
ver-gpt/arxiv_cli/cli/: digest_cmd.py  download.py  export_cmd.py  list_cmd.py  main.py  subscribe_cmd.py  track_cmd.py
ver-gpt/arxiv_cli/config/: paths.py
ver-gpt/arxiv_cli/digest/: generator.py
ver-gpt/arxiv_cli/export/: bibtex.py  csl.py
ver-gpt/arxiv_cli/storage/: history.py  library.py  schema.py  subscriptions.py  tracking.py
ver-gpt/arxiv_cli/utils/: formatting.py  paths.py
ver-gpt/cmd/arxiv-cli/: main.go
ver-gpt/docs/: architecture.md  batch_ids.txt  library.example.json
ver-gpt/internal/: README.md
ver-gpt/tests/: test_arxiv_client_retry.py  test_arxiv_id_normalize.py  test_atom_parser.py  test_base_id_version_parsing.py  test_digest_generator.py  test_export_formats.py  test_library_remove_by_base_id.py  test_library_roundtrip.py  test_list_filters.py  test_paths_safe_filename.py  test_rate_limiter.py  test_subscribe_backoff.py  test_subscriptions_store.py  test_track_remove.py  test_track_status_and_tags.py  test_track_versions_store.py
ver-gpt/tests/fixtures/: arxiv_feed_minimal.xml
(+19 files in other folders)
