[project]
name = "arxiv-cli"
version = "0.1.0"
description = "CLI for arXiv: search, digests, saved queries, PDF download, BibTeX/CSL export"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vita" }]
dependencies = [
  "typer>=0.12.0",
  "platformdirs>=4.0.0",
]

[project.scripts]
arxiv = "arxiv_cli.cli.main:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"
